# umbc_husky

./: CMakeLists.txt  package.xml
config/: j2n6s300_control.yaml
husky_moveit_config/: CMakeLists.txt  package.xml
husky_moveit_config/launch/: husky_arm_moveit.launch  move_group_j2n6s300.launch  planning_context.launch
husky_moveit_config/src/: arm_wooz.py  controller.py  indicate.py  indicate_test.py  test.py
launch/: control.launch  demo_rtab_mapping.launch  description.launch  husky_empty_world.launch  husky_playpen.launch  spawn_husky.launch  view_model.launch
src/: move_arm.py  move_robot.py
umbc_husky/config/: j2n6s300_control.yaml
umbc_husky/launch/: demo_rtab_mapping.launch  description.launch  filter.launch  husky_empty_world.launch  rtab_odom.launch  spawn_husky.launch  test.launch  test_playpen.launch  view_robot.launch
umbc_husky/src/: move_arm.py  move_robot.py
umbc_husky/urdf/: umbc_husky_full.urdf
urdf/: test.urdf  umbc_husky.urdf.xacro
